# subsense

./: .gitignore  CMakeLists.txt  README.md
Python/: Subsense.py
Subsense/: API.cpp  API.h  BackgroundSubtractorSuBSENSE.cpp  BackgroundSubtractorSuBSENSE.h
Subsense.xcodeproj/: project.pbxproj
Subsense.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
